# autoresearch-sidecar

./: .gitignore  README.md  main.py  pyproject.toml
autoresearch_sidecar/: __init__.py  agent_runtime.py  agent_trace.py  backend_protocol.py  cli.py  experiment_backend.py  experiment_contract.py  experiment_executor.py  orchestrator.py  orchestrator_factory.py  orchestrator_validators.py  tool_environment.py  work_context.py  workflow_spec.py
tests/: test_backend_protocol.py  test_runtime_tool_protocol.py  test_runtime_trace.py
v0/: agent.py  iterator.py  prepare.py  state.py  x0.py
v0/tokenizer/: token_bytes.pt  tokenizer.pkl
v1/: agent.py  iterator.py  state.py
v2/: compiler.py  dsl.py  main.py  spec.py
v3/: COMPILED_PLAN.txt  KERNEL_NOTES.txt  compiled_kernel.py  compiler.py  main_residual.py  runtime.py  smoke_test_residual.py  world.py
v4/: THIN_KERNEL_NOTES.txt  compiled_kernel.py  compiler.py  emit_kernel.py  host_ops.py
v5/: TRACE_NOTES.txt  compiled_kernel.py  compiler.py  main_residual.py  runtime.py
v6/: BUNDLE_NOTES.txt  bundle_trace_compare_smoke_test.py  compiler.py  main_bundle_residual.py  smoke_test_residual.py  trace_compare_smoke_test.py
v6/autoresearch_bundle/: __init__.py  compiled_kernel.py  manifest.py  world_adapter.py
